# postcraft

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
progress/: 20260514.md
src/adapters/primary/: cli.py
src/adapters/secondary/: file_system.py  llm_adapter.py  observability.py  workspace.py
src/application/: __init__.py
src/application/agents/: draft_generation_agents.py  project_scanner_agent.py  repository_analyst_agent.py
src/application/state/: __init__.py  project_scanner_state.py
src/application/use_cases/: __init__.py  draft_project_post.py
src/domain/entities/: agent_base.py  draft_generation.py  project_scan.py
src/domain/ports/: llm.py  repositories.py
src/shared/: config.py  factory.py  llm.py
tests/: test_config.py  test_llm.py  test_observability.py
tests/evals/: helpers.py  test_agent_contracts.py  test_artifact_contracts.py  test_grounding.py  test_scanner_evidence.py  test_self_eval.py
tests/fixtures/repos/minimal_script/: script.py
tests/fixtures/repos/python_layered_cli/: Makefile  README.md  pyproject.toml
tests/fixtures/repos/python_layered_cli/src/: cli.py
tests/fixtures/repos/python_layered_cli/src/adapters/: repository.py
tests/fixtures/repos/python_layered_cli/src/application/: use_case.py
tests/fixtures/repos/python_layered_cli/src/domain/: model.py
tests/fixtures/repos/rust_home_assistant_cli/: Cargo.toml  README.md  makefile
tests/fixtures/repos/rust_home_assistant_cli/src/: cli.rs  main.rs
tests/fixtures/repos/rust_home_assistant_cli/src/app/: prompts_service.rs
tests/fixtures/repos/rust_home_assistant_cli/src/infra/: ha_repo.rs
tests/integration/: test_agents.py  test_draft_project_post.py
